Fix grid overlaps with position:relative in css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -144,7 +144,6 @@ body {
     color: rgb(222, 146, 168);
 }
 
-
 :root {
     --card_width: 250px;
     --row_increment: 10px;
@@ -184,8 +183,6 @@ body {
 }
 
 .card {
-    /* border: none;
-    background-color: transparent; */
     padding: 0;
     margin: 15px 10px;
     border: none !important;
@@ -253,12 +250,33 @@ body {
     padding: 0.1rem;
 }
 
-#loginmessage {
-    margin-top: 60px;
-}
-
 .btn-rounded {
     border-radius: 19px;
+}
+
+.spacer {
+    width: 100%;
+    height: 40px;
+}
+
+.created_dish_wall_container {
+    margin: 0;
+    padding: 0;
+    padding-bottom: 50px;
+    width: 80vw;
+    max-width: 1140px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    display: grid;
+    grid-template-columns: repeat(auto-fill, var(--card_width));
+    grid-auto-rows: var(--row_increment);
+    justify-content: center;
+    background-color: transparent;
+}
+
+#loginmessage {
+    margin-top: 60px;
 }
 
 #prof-pic {
@@ -279,29 +297,6 @@ body {
     position: relative;
 }
 
-.spacer {
-    width: 100%;
-    height: 40px;
-}
-
 #created_dishes_list {
     max-width: 1140px;
-}
-
-.created_dish_wall_container {
-    margin: 0;
-    padding: 0;
-    padding-bottom: 100px;
-    width: 80vw;
-    max-width: 1140px;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-
-    display: grid;
-    grid-template-columns: repeat(auto-fill, var(--card_width));
-    grid-auto-rows: var(--row_increment);
-    justify-content: center;
-
-    background-color: transparent;
 }
